# avm-zestimate

./: .gitignore  DEPLOY.md  README.md  package.json
.github/workflows/: ci.yml  deal-monitor.yml  retrain.yml
api/: Dockerfile  main.py  model_loader.py  requirements.txt  schemas.py
api/routers/: benchmark.py  comps.py  deals.py  predict.py  property_lookup.py  scan.py  search.py
api/scripts/: monitor.py  seed_inventory.py
api/services/: llm.py
api/tests/: test_search.py  test_smoke.py
docs/superpowers/plans/: 2026-05-07-avm-go-live-deployment.md  2026-05-07-avm-zestimate.md  2026-05-08-ai-layer.md  2026-05-09-product-restructure-9-of-10.md  2026-05-09-tcad-census-enrichment.md
docs/superpowers/specs/: 2026-05-07-avm-zestimate-design.md  2026-05-08-ai-layer-design.md
ml/: pyproject.toml  run_training.py
ml/src/avm/: baseline.py  clean.py  comps.py  enrich_census.py  enrich_tcad.py  evaluate.py  experiment.py  features.py  ingest.py  intervals.py  shap_gen.py  split.py  train.py
ml/tests/: test_clean.py  test_comps.py  test_enrich_tcad.py  test_evaluate.py  test_features.py  test_ingest.py  test_split.py
scripts/: backfill_photos2.py  setup.mjs
supabase/: schema.sql
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/benchmark/: page.tsx
web/components/: BenchmarkChart.tsx  BrowseCanvas.tsx  CompsTable.tsx  DealCard.tsx  ExplanationCard.tsx  OpportunityCard.tsx  PredictionCard.tsx  SearchBar.tsx  SearchResults.tsx  ShapWaterfall.tsx  ValueCanvas.tsx  ZipAccuracyTable.tsx
web/lib/: api.ts
(+5 files in other folders)
