[project]
name = "avm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "shap>=0.44",
    "optuna>=3.6",
    "mlflow>=2.13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "httpx>=0.27",
    "numbers-parser>=4.2",
    "openpyxl>=3.1",
    "kaggle>=1.6",
    "requests>=2.31",
    "huggingface-hub>=0.23",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avm"]
